--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.text {
+  width: 500px;
+  height: 500px;
+}
